# voxels-private

./: Cargo.toml  README.md
.github/workflows/: rust.yml
bevy-ball-game/src/: main.rs  resources.rs  systems.rs
bevy-ball-game/src/enemy/: mod.rs
bevy-ball-game/src/game/: mod.rs  systems.rs
bevy-ball-game/src/main_menu/: components.rs  mod.rs  styles.rs
bevy-ball-game/src/player/: mod.rs  systems.rs
bevy-ball-game/src/star/: mod.rs
components/src/: main.rs
src/: block.rs  chunk.rs  coordinates.rs  element.rs  lib.rs  main.rs  mesh_utils.rs  net.rs  player.rs  systems.rs
src/app_state/: mod.rs  plugin.rs  state.rs  transition.rs
src/command_interface/: mod.rs
src/command_system/: command_interface.rs  events.rs  mod.rs  plugin.rs
src/coordinate_system/: coordinates.rs  mod.rs  plugin.rs
src/debug_menu/: debug_ui.rs  mod.rs  plugin.rs
src/main_menu/: interactions.rs  layout.rs  mod.rs  plugin.rs  styles.rs
src/player/: controls.rs  events.rs  lib.rs  mod.rs  plugin.rs
src/player/client/: client_in.rs  client_out.rs  controls.rs  events.rs  mod.rs  plugin.rs  setup.rs
src/player/server/: event_handlers.rs  event_responders.rs  events.rs  mod.rs  movement.rs  plugin.rs  server_in.rs  server_out.rs  setup.rs
src/world/: atmosphere.rs  block.rs  chunk.rs  commands.rs  element.rs  events.rs  mesh_utils.rs  mod.rs  plugin.rs
src/world/client/: atmosphere.rs  client_in.rs  events.rs  mesh_utils.rs  mod.rs  plugin.rs
voxels/: Cargo.toml
voxels/src/: block.rs  camera.rs  coordinates.rs  main.rs  player.rs  quad.rs  systems.rs  world.rs
(+20 files in other folders)
