[package]
name = "voxels"
version = "0.1.0"
edition = "2021"
default-run = "voxels"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
bevy_screen_diagnostics = "0.4.0"
rand = "0.8.0"
bevy_spectator = "0.4"
bevy_atmosphere = "0.8.1"
bevy_debug_grid = "0.4"
noise = "0.8.2"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
bevy_egui = "0.23.0"
renet_visualizer = { version = "0.0.7", features = ["bevy"] }
smooth-bevy-cameras = "0.10"
fastrand = "2.0.0"

bevy_renet = { version = "0.0.10", features = ["serde"]}

[[bin]]
name = "voxels"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[package.metadata.scripts]
both = "cargo run --bin server & cargo run --bin client"